[2015-08-01]
Version 0.7.1 UNRELASED

- Internal changes:

  * Improving C++11 compatibilty mode:

    * Convert std::auto_ptr (deprecated in C++11) to unique_ptr

    * Convert instances of boost::shared_ptr, make_shared, and weak_ptr to be
      explicitly prefixed by boost::, otherwise they clash or have problems
      compiling with the new C++11 std::shared_ptr and analogues (many were not
      converted in the previous version).

    * Remove unused function serialize_pattern_list()

    * Remove unused function wcsempty()


[2015-07-25]
Version 0.7

- Changes in the versioning scheme and changelog:

  * From now on Aptitude's version numbers follow loosely the Semantic
    Version specification (http://semver.org/), with a few exceptions:

    * The leading zero is kept for now. The first digit after "0." is
      currently considered being the major version.

    * Trailing zeros may be omitted, i.e. 0.7 is the same as 0.7.0.0
      with 7 being the major version.

  * Dates in the NEWS file are now consistently written in an
    unambiguous and more international way.

- Feature removals:

  * The content-wise outdated and not-multiarch-compatible categorical
    browser has been removed. The Debtags browser has replaced most of
    its functionality already. Local package groups are no more
    available, though.  (Closes: #686124 and its duplicates as well as
    #686142 and #686646 as well as LP: #1082198)

    The removal discussion has taken place in #686646.

- Bug fixes:

  * Fix reported installed size change when installing/deinstalling packages
    which are bigger than 2 GiB (int type size 32 bits).  Thanks Benny Baumann
    and Jason Rhinelander for the report and info, and Sven Joachim for the
    patch.  (Closes: #759769)

- Internal changes:

  * Use automake option subdir-objects to be able to use current
    automake versions.

    * Copy in configure.ac from /usr/src/gtest/src/gtest-all.cc and